--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "type": "module",
   "scripts": {
-    "ruler:apply": "bunx @intellectronica/ruler apply",
-    "ruler:apply:nested": "bunx @intellectronica/ruler apply --nested",
-    "ruler:revert": "bunx @intellectronica/ruler revert",
+    "ruler:apply": "npx @intellectronica/ruler apply",
+    "ruler:apply:nested": "npx @intellectronica/ruler apply --nested",
+    "ruler:revert": "npx @intellectronica/ruler revert",
     "build": "npx react-router build",
-    "dev": "bun run ruler:apply || true && bunx react-router dev",
+    "dev": "npm run ruler:apply || true && npx react-router dev",
     "start": "npx react-router-serve ./build/server/index.js --port ${PORT:-8080}",
     "typecheck": "npx react-router typegen && npx tsc",
-    "docs:install": "cd docs && bun install",
-    "docs:dev": "cd docs && bun run dev",
-    "docs:build": "cd docs && bun run build",
-    "migrations:run": "bunx convex run migrations:run",
-    "migrations:run:one": "bunx convex run migrations:runIt",
-    "migrations:runAll": "bunx convex run migrations:runAll",
-    "migrations:status": "bunx convex run --component migrations lib:getStatus --watch",
-    "migrations:cancel": "bunx convex run --component migrations lib:cancel"
+    "docs:install": "cd docs && npm install",
+    "docs:dev": "cd docs && npm run dev",
+    "docs:build": "cd docs && npm run build",
+    "migrations:run": "npx convex run migrations:run",
+    "migrations:run:one": "npx convex run migrations:runIt",
+    "migrations:runAll": "npx convex run migrations:runAll",
+    "migrations:status": "npx convex run --component migrations lib:getStatus --watch",
+    "migrations:cancel": "npx convex run --component migrations lib:cancel",
+    "seed": "npx tsx scripts/seed-database.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
